syntax = "proto3";

option csharp_namespace = "Presentation";

package shipping_query;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service ShippingQueryService {
	rpc PublishMessageSimulation (ShippingOrderEventMessage) returns (PublishMessageSimulationResponse);
}

message EventMessage {
	string event_type = 1;
	google.protobuf.StringValue data = 2;
}

message ShippingOrderEventMessage {
	string stream_id = 1;
	repeated EventMessage events = 2;
}

message PublishMessageSimulationResponse {

}